# gravity-simulator

./: .gitignore  build-android.sh  generate-icons.py  index.html  lang.json  package-lock.json  package.json  script.js  script.ts  style.css  tsconfig.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
